<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_button"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_names_ascending"
            android:title="@string/sort_by_names_ascending_text" />
        <item
            android:id="@+id/sort_names_descending"
            android:title="@string/sort_by_names_descending_text" />
        <item
            android:id="@+id/sort_by_date_ascending"
            android:title="@string/sort_by_date_ascending_text" />
        <item
            android:id="@+id/sort_by_date_descending"
            android:title="@string/sort_by_date_descending_text" />
    </group>
</menu>
